tests/baselines/reference/metadataOfClassFromModule(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
metadataOfClassFromModule.ts(8,17): error TS2564: Property 'leftLeg' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== metadataOfClassFromModule.ts (1 errors) ====
    namespace MyModule {
    
        export function inject(target: any, key: string): void { }
    
        export class Leg { }
    
        export class Person {
            @inject leftLeg: Leg;
                    ~~~~~~~
!!! error TS2564: Property 'leftLeg' has no initializer and is not definitely assigned in the constructor.
        }
    
    }